<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">2FA Authenticator</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>
    <string name="save">Save</string>
    <string name="code_copied">Code copied to clipboard.</string>

    <string name="error_camera_open">Error while opening camera!</string>
    <string name="error_permission_camera_open">No permission to open the camera</string>
    <string name="error_image_open">Error while opening image!</string>

    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Delete this token?</string>
    <string name="logo">logo</string>
    <string name="menu">menu</string>
    <string name="username">username</string>
    <string name="user_example_com">user@example.com</string>
    <string name="frame">frame</string>
    <string name="token_example">eb40924b&#8211;1d13&#8211;4807&#8211;9a76&#8211;30eb7ffa7eba</string> <!-- &#8211; is - -->
    <string name="otp_example">01234567</string>

    <string-array name="algorithms">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
</resources>
