<?xml version="1.0" encoding="utf-8"?>
<com.vs.authenticator.TokenLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:freeotp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/token">

    <ImageView
        android:id="@+id/image"
        android:layout_width="96dp"
        android:layout_height="106dp"
        android:layout_gravity="start|center"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <com.vs.authenticator.ProgressCircle
        android:id="@+id/progressInner"
        android:layout_width="96dp"
        android:layout_height="106dp"
        android:layout_gravity="start|center"
        android:padding="28dp"
        freeotp:hollow="false"
        freeotp:max="1000" />

    <com.vs.authenticator.ProgressCircle
        android:id="@+id/progressOuter"
        android:layout_width="96dp"
        android:layout_height="106dp"
        android:layout_gravity="start|center"
        android:padding="24dp"
        freeotp:hollow="true"
        freeotp:max="1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/issuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|center"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|center"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/user_example_com"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:gravity="start|center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/otp_example"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/menu"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:src="@drawable/menu" />
</com.vs.authenticator.TokenLayout>
